Fixed Nav Rendering Issue on Mobile
Nav Rendering issue on mobile fixed (text was always rendering causing nav items to overflow until js was run, now no longer happens).

Added publish configuration

--- a/WebApp/KIWebApp/Content/sass/shared/_navigation.scss
+++ b/WebApp/KIWebApp/Content/sass/shared/_navigation.scss
@@ -111,3 +111,7 @@ body {
         left: $nav-width-collapsed; /* add a left offset that is outside of the nav-bar width */
     }
 }
+
+.js-nav-text {
+    display: none;
+}
